--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,6 +15,11 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media screen and (max-width: 645px) {
+    width: calc(100vw - 40px);
+    margin-top: 20px;
+  }
 }
 
 .content {
@@ -25,15 +30,49 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+
+    @media screen and (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media screen and (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: 730px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (max-width: 1300px) {
+      flex-direction: column-reverse;
+
+      .categories {
+        margin-top: 30px;
+        width: 500px;
+        overflow: scroll;
+
+        ul {
+          width: 785px;
+        }
+      }
+    }
+
+    @media screen and (max-width: 650px) {
+      .categories {
+        width: 100%;
+      }
+    }
   }
 }
 
